--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,7 +37,20 @@ body {
   border-bottom: 1px solid #ddd;
 }
 
+#authors {
+  img {
+    margin-top: -50px;
+  }
 
+  .card:hover {
+    background: $primary;
+    color: #fff;
+  }
+
+  .fab {
+    color: #fff;
+  }
+}
 
 @media(max-width: 768px) {
   #showcase {
